<resources>
    <string name="app_name">GoFix_App</string>

    <string name="login_txt">Login into your account</string>
    <string name="username">username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t have an account? Register</string>
    <string name="forgot">Forgot password</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="user_category">User category</string>
    <string name="phone">Phone</string>
    <string name="conf_pass">Confirm password</string>
    <string name="agree">I agree to terms and conditions</string>
    <string name="alred_acc">Already have an account? Login</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_cont">Sign in to continue</string>
    <string name="change_lang">Change Language</string>
    <string name="create_acc">Create your account here</string>
    <string name="user_type">User type</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="reset">Reset your password</string>
    <string name="resetbtn">Reset password</string>
    <string name="sec">Security</string>
    <string name="changepwd">Change password</string>
    <string name="legal">Legal</string>
    <string name="terms">Terms and conditions</string>
    <string name="priva">Privacy policy</string>
    <string name="reach">Reach us</string>
    <string name="about">About</string>
    <string name="Contactus">Contact us</string>
    <string name="faq">FAQs</string>
    <string name="logout">Logout</string>
    <string name="delete">DELETE MY ACCOUNT</string>
    <string name="Auto">Automobile services</string>
    <string name="mecha">Mechanics</string>
    <string name="spare">Shop</string>
    <string name="carrental">Rent a car</string>


    <!-- error messages -->
    <string name="emailErr">Invalid email address</string>
    <string name="passwordErr">Incorrect password</string>
    <string name="invalidCredentials">Incorrect Email or Password</string>
    <string name="stdError">Something went wrong! Please try again</string>
    <string name="fieldErr">required</string>
    <string name="confirmErr">Confirm password</string>
    <string name="passwdErr">Password Not Matching</string>
    <string name="tcsErr">Accept terms and conditions to continue</string>
    <string name="accountExist">Email already exist</string>
    <string name="success">Completed Successfully!</string>
    <string name="engine">Engine</string>
    <string name="electricity">Electricity</string>
    <string name="pnematic">pnematic:suspension</string>
    <string name="sheetmetal">Sheetmetal:painting</string>
    <string name="none"></string>
    <string name="gearbox">Gearbox</string>
    <string name="ac">AC</string>
    <string name="repair">Repair</string>
    <string name="maintenance">Maintenance</string>
    <string name="findgar">Find a garage</string>
    <string name="findmec">Find a mechanician</string>
    <string name="findwasher">Find a car wash</string>
    <string name="registerGar">Register Garage/Mechanician</string>

    <string name="findSpare">Spare Parts</string>
    <string name="regSpare">Register your shop</string>

    <string name="book">Book Now</string>
    <string name="regShop">Register your shop here</string>
    <string name="regDrivers">Register yourself here</string>
    <string name="shopname">Shop name</string>
    <string name="Address">Commercial Address</string>
    <string name="tin">Tin number</string>
    <string name="personcont">Shop owner name</string>

    <string name="thankshop">Thank your for registering your shop, The system admin will contact you soon</string>
    <string name="thankRental">Thank your for registering your company, The system admin will contact you soon</string>
    <string name="backhome">Back home</string>

    <string name="order">Order Now</string>

    <string name="thankspare">Thank you for ordering  with us, in meantime you can contact the saler</string>
    <string name="thankreq">Thank you for service request, in meantime you can contact the service agent</string>
    <string name="thankbooker">Thank you for booking request, in meantime you can contact the rental agent</string>

    <string name="contact">Contacts</string>
    <string name="rentcar">Rent a car</string>
    <string name="rerental">Register your company</string>
    <string name="rentalcar">Register your car rental company here</string>
    <string name="companyName">Company name</string>
    <string name="companyOwner">Company owner name</string>
    <string name="service">Car Service</string>
    <string name="request">Request appointment</string>
    <string name="details">More Information</string>
    <string name="driverhire">Hire a driver</string>
    <string name="finddrive">Find a driver</string>
    <string name="Registerdrive">Register as a driver</string>
    <string name="name">Name</string>
    <string name="id">ID number</string>
    <string name="diverlicense">Driving license Number</string>
    <string name="category">Categories (Letters only)</string>
    <string name="select">Select date of service</string>
    <string name="oldpwd">Current password</string>
    <string name="newpwd">New password</string>
    <string name="Cnewpwd">Confirm new password</string>
    <string name="requiredFieldErr">* required</string>
    <string name="electronics">Electronic devices</string>
<string name="ouservices">Our Services</string>

</resources>