<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessLeaf">

        <!-- HEADER SECTION -->
        <LinearLayout
            android:layout_width="match_parent"
            android:weightSum="5"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvBack"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:layout_gravity="center_vertical"
                android:textColor="@color/green_2"
                android:layout_marginLeft="8dp"
                app:drawableLeftCompat="@drawable/ic_arrow_back_black_24dp"
                app:drawableStartCompat="@drawable/ic_arrow_back_black_24dp"
                android:fontFamily="@font/open_sans_semibold"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"
            android:layout_marginTop="8dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/> <!-- End Header Section -->

        <!-- *********************************** -->
        <!--            Account Summary          -->
        <!-- *********************************** -->
        <LinearLayout
            android:id="@+id/accountSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:weightSum="5"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/card_bg_2"
            android:padding="25dp"
            android:orientation="horizontal"
            tools:ignore="DisableBaselineAlignment">

            <!--  Icon -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1.2">

                <ImageView
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:padding="5dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/circle"
                    android:src="@drawable/ic_person_black_24dp"
                    tools:ignore="ContentDescription" />

            </LinearLayout> <!--  End Icon -->

            <!-- Identification Details -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:layout_weight="3.8">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:text="@string/username"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/phone"/>

            </LinearLayout> <!-- End Identification Details -->

        </LinearLayout> <!--  End Account summary -->

        <!-- *********************************** -->
        <!--                Security             -->
        <!-- *********************************** -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:padding="10dp"
                android:textColor="@color/grey_2"
                android:text="@string/sec"
                tools:ignore="RtlCompat" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:padding="15dp"
            android:textColor="@color/grey_3"
            android:text="@string/changepwd"
            tools:ignore="RtlCompat" /> <!--  End Security -->

        <!-- *********************************** -->
        <!--                Legal                -->
        <!-- *********************************** -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:padding="10dp"
                android:textColor="@color/grey_2"
                android:text="@string/legal"
                tools:ignore="RtlCompat" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvTermsAndConditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:padding="15dp"
            android:textColor="@color/grey_3"
            android:text="@string/terms"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/tvPrivacyPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:padding="15dp"
            android:textColor="@color/grey_3"
            android:text="@string/priva"
            tools:ignore="RtlCompat" /> <!--  End Legal -->

        <!-- *********************************** -->
        <!--              Reach Us               -->
        <!-- *********************************** -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:padding="10dp"
                android:textColor="@color/grey_2"
                android:text="@string/reach"
                tools:ignore="RtlCompat" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:padding="15dp"
            android:textColor="@color/grey_3"
            android:text="@string/about"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/tvContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:padding="15dp"
            android:textColor="@color/grey_3"
            android:text="@string/Contactus"
            android:layout_marginLeft="20dp" />

        <TextView
            android:id="@+id/tvFAQs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:padding="15dp"
            android:textColor="@color/grey_3"
            android:text="@string/faq"
            tools:ignore="RtlCompat" /> <!--  End Legal -->

        <!-- *********************************** -->
        <!--     Logout & Account Delete         -->
        <!-- *********************************** -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:padding="10dp"
                android:textColor="@color/grey_2"
                tools:ignore="RtlCompat" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:padding="15dp"
            android:textColor="@color/grey_3"
            android:text="@string/logout"
            tools:ignore="RtlCompat" /> <!--  End Logout -->

        <TextView
            android:id="@+id/tvDeleteAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:padding="15dp"
            android:textColor="@color/red"
            android:text="@string/delete"
            android:layout_marginBottom="10dp"
            tools:ignore="RtlCompat" /> <!--  Logout & Account Delete -->

    </LinearLayout>

</ScrollView>